Fix overflow issue

--- a/core/sass/learn/_base.scss
+++ b/core/sass/learn/_base.scss
@@ -84,6 +84,7 @@ $desktop: 1024px;
   min-height: 360px;
   position: relative;
   padding-left: 30px;
+  overflow: hidden;
 }
 
 .learn__category-content {
